@@ -1,3 +1,9 @@
+2010-01-27  Romain Francois <francoisromain@free.fr>
+
+	* src/RInside.{h,cpp}: include Rcpp.h and use the Rf_ prefixed R API
+	functions. stop using macros from Rdefines because they don't
+	work with R_NOREMAP
+
 2010-01-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Increase Version: to 0.2.1
